k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testqa-main-postgres
  namespace: testqa
  labels:
    app: testqa-main-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testqa-main-postgres
  template:
    metadata:
      labels:
        app: testqa-main-postgres
    spec:
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume-pvc
      containers:
        - name: testqa-main-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: '/var/lib/postgresql/data'
              name: postgres-volume
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: testqa
spec:
  type: LoadBalancer
  ports:
    - name: 'testqa-main-postgres'
      port: 5434
      targetPort: 5432
  selector:
    app: testqa-main-postgres
