k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testqa-main-api
  namespace: testqa
  labels:
    app: testqa-main-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testqa-main-api
  template:
    metadata:
      labels:
        app: testqa-main-api
    spec:
      volumes:
        - name: files-volume
          persistentVolumeClaim:
            claimName: files-volume-pvc
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: testqa-main-api
          image: ${DOCKER_IMAGE}
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: '/files'
              name: files-volume
---
apiVersion: v1
kind: Service
metadata:
  namespace: testqa
  name: testqa-main-api-service
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: testqa-main-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: testqa
  name: testqa-main-api-ingress
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  rules:
    - host: ${VIRTUAL_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testqa-main-api-service
                port:
                  number: 80
  tls:
    - secretName: testqa-main-api-tls
      hosts:
        - ${VIRTUAL_HOST}
